NetBSD Problem Report #46678

From www@NetBSD.org  Mon Jul  9 21:35:19 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 4855D63B882
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  9 Jul 2012 21:35:19 +0000 (UTC)
Message-Id: <20120709213518.AD28263B85F@www.NetBSD.org>
Date: Mon,  9 Jul 2012 21:35:18 +0000 (UTC)
From: ianw@vmware.com
Reply-To: ianw@vmware.com
To: gnats-bugs@NetBSD.org
Subject: Prototype for rl_free_line_state which isn't implemented
X-Send-Pr-Version: www-1.0

>Number:         46678
>Category:       lib
>Synopsis:       Prototype for rl_free_line_state which isn't implemented
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jul 09 21:40:00 +0000 2012
>Closed-Date:    Sun Sep 02 03:49:28 +0000 2012
>Last-Modified:  Sun Sep 02 03:49:28 +0000 2012
>Originator:     Ian Wienand
>Release:        
>Organization:
VMware
>Environment:
>Description:
In readline.h there's a prototype for "rl_free_line_state" (which
isn't implemented, which is fine) but there's no stub implementation
in readline.c [2].


[1] http://cvsweb.netbsd.org/bsdweb.cgi/src/lib/libedit/readline/readline.h?rev=1.33&content-type=text/x-cvsweb-markup&sortby=date
[2] http://cvsweb.netbsd.org/bsdweb.cgi/src/lib/libedit/readline.c?rev=1.104&content-type=text/x-cvsweb-markup&sortby=date

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46678 CVS commit: src/lib/libedit
Date: Thu, 12 Jul 2012 14:46:20 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Thu Jul 12 18:46:20 UTC 2012

 Modified Files:
 	src/lib/libedit: readline.c

 Log Message:
 PR/46678: Ian Wienand: Add stub implementation for rl_free_line_state()


 To generate a diff of this commit:
 cvs rdiff -u -r1.104 -r1.105 src/lib/libedit/readline.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 02 Sep 2012 03:49:28 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.