PR/46678: Ian Wienand: Add stub implementation for rl_free_line_state()